# PSU_minishell2_2017

./: .gitignore  CMakeLists.txt  Makefile  README.md  file  mysh_uncompatible
errors/: infinite  infinite_loop.c  sigsev  sigsev.c
include/: minishell.h  structs.h
lib/my/: Makefile
lib/my/include/: my.h
lib/my/src/: my_countwords.c  my_putnstr.c  my_str_isalpha.c
src/: main.c  minishell.c
src/actions/: environment_actions.c
src/builtin/: cd_command.c  echo_command.c  env_command.c  exit_command.c  printenv_command.c  setenv_command.c  unsetenv_command.c
src/handlers/: signal_handler.c
src/managers/: check_binaries.c  command_manager.c  input_manager.c  prompt_manager.c
src/managers/commands/: check_binaries.c  command_manager.c
src/managers/environment/: env_manager.c  environment_actions.c
src/managers/pipes/: pipes_manager.c
src/managers/redirections/: redirect_manager.c
src/utils/: error.c  get_next_line.c  parsing_utils.c  struct_utils.c
tests/: minishell_tests.c
tests/intra/: my_divzero  my_floating_exp  tests
